# midiex

./: .gitignore  .iex.exs  BUILDING.md  Brewfile  CHANGELOG.md  LICENSE  README.md  midi_notes.xlsx  midiex_notebook.livemd  mix.exs  ~$midi_notes.xlsx
.github/workflows/: release.yml
lib/: arpeggiator.ex  chord.ex  midi_io.ex  midi_out_conn.ex  midi_output.ex  midi_port.ex  midiex.ex  note.ex  scale.ex
lib/midiex/: arpeggiator.ex  backend.ex  chord.ex  listener.ex  message.ex  midi_in_conn.ex  midi_message.ex  midi_notification.ex  midi_out_conn.ex  midi_port.ex  note.ex  notifier.ex  scale.ex  server.ex  time.ex  virtual_midi_port.ex
lib/midiex/message/: channel_voice.ex
lib/not used/: midi_input_connection.ex
lib/scale/: intervals.ex
lib_2_extras/: midi_notes.xlsx  midiex_extras.ex
lib_2_extras/midiex/: note.ex  scale.ex
livebook/: midiex_notebook.livemd
native/midiex/: .a.out.swp  Cargo.toml  README.md  a.out
native/midiex/.cargo/: config.toml
native/midiex/src/: __lib_api_v1.txt  lib.rs
test/: midiex_test.exs  readme_test.exs
