[package]
name = "midiex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "midiex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.29.0"
midir = "0.9.1"
lazy_static = "1.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
coremidi = "0.7.0"
