[package]
name = "midiex"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "midiex"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { version = "0.34", default-features = false, features = ["derive", "nif_version_2_17"] }
midir = "0.10.0"
lazy_static = "1.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
coremidi = "0.7.0"
